removed width css property from workspace selector toolbar item as it caused layout issues in non english backends
git-svn-id: https://svn.typo3.org/TYPO3v4/Core/trunk@2840 709f56b5-9817-0410-a4d7-c38de5d9e867

--- a/typo3/css/backend-style.css
+++ b/typo3/css/backend-style.css
@@ -100,7 +100,6 @@ Description : styles the TYPO3 backend
 	padding-top: 2px;
 	padding-left: 7px;
 	margin-right: 5px;
-	width: 146px;
 }
 
 /* ----- Caching ----- */
